refactor: Improves readability for commandInvocation